--- a/skript.tex
+++ b/skript.tex
@@ -1148,7 +1148,7 @@ Es seien $\sigma,\tau\in S_n$ beliebig. Dann gilt
 	
 	F\"ur ein Repräsentantensystem $\{ x_i\}_{i\in I}$ der Bahnen von G gilt die Bahnengleichung:
 
-	$$|X|=\sum\limits_{\begin{subarray}{1}i \in I\end{subarray}}|G_{x_i}|=\sum\limits_{\begin{subarray}{1}i \in I\end{subarray}}[G:G_{x_i}]=|X^G|+\sum\limits_{\begin{subarray}{1}i \in I\\ x_i \notin X^G\end{subarray}}[G:G_{x_i}]$$
+	$$|X|=\sum\limits_{\begin{subarray}{1}i \in I\end{subarray}}|Gx_i|=\sum\limits_{\begin{subarray}{1}i \in I\end{subarray}}[G:G_{x_i}]=|X^G|+\sum\limits_{\begin{subarray}{1}i \in I\\ x_i \notin X^G\end{subarray}}[G:G_{x_i}]$$
 	
 	
 	\end{proof}
