--- a/skript.tex
+++ b/skript.tex
@@ -1122,7 +1122,7 @@ Es seien $\sigma,\tau\in S_n$ beliebig. Dann gilt
 	
 	\begin{thm}
 	$G \times X \rightarrow X$ Gruppenoperation. Dann ist die Abbildung
-	$$p: G/G_x \rightarrow G_x$$
+	$$p: G/G_x \rightarrow Gx$$
 	$$gG_x \rightarrow gx$$
 	ein bijektiver $G$-Homomorphismus für alle $X \in X$.
 	\end{thm}
@@ -1132,13 +1132,13 @@ Es seien $\sigma,\tau\in S_n$ beliebig. Dann gilt
 	\end{defn}
 	
 	\begin{kor}
-	$|G_x|=|G/G_x|=[G:G_x]$ Index
+	$|Gx|=|G/G_x|=[G:G_x]$ Index
 	\end{kor}
 	
 	\begin{proof}
 	$p$ ist wohldefiniert: $\forall a,b,x \in G$ gilt:
-	$$aG_x=b_Gx \Leftrightarrow b^{-1}ax=x \Leftrightarrow ax=bx \Leftrightarrow p(a)=p(b)$$
-	D.h. $p$ ist wohldefiniert LA ich bijektiv.
+	$$aG_x=bG_x \Leftrightarrow b^{-1}a \in G_x \Leftrightarrow b^{-1}ax=x \Leftrightarrow ax=bx \Leftrightarrow p(a)=p(b)$$
+	D.h. $p$ ist wohldefiniert als auch bijektiv.
 	$p$ ist ein $G$-Homomorphismus: $\forall a,b \in G$:
 	$$p(a(b(G_x)))=p(ab(G_x))=abx=ap(bG_x)$$
 	Die Bahnen einer $G$-Operation sind die \"Aquivalenzklassen bezüglich der \"Aquivalenzrelation:
